Code fixes and comments

--- a/XcentiumCodingChallege/Views/PageContent/Index.cshtml
+++ b/XcentiumCodingChallege/Views/PageContent/Index.cshtml
@@ -5,12 +5,10 @@
 <div class="row">
     <h2>Index</h2>
     <input type="text" name="name" id="txt1" value="" />
-    <input type="button" name="name1" id="btn1" value="Enter URL">
+    <input type="button" name="name1" id="btn1" value="Submit URL">
 </div>
 
 <div id="pageContent"></div>
 
-<script>
 
-</script>
 
